--- a/package.json
+++ b/package.json
@@ -3,19 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/material-ui": "^0.21.12",
     "@types/node": "^12.20.42",
     "@types/react": "^16.14.22",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.22",
+    "@types/styled-components": "^5.1.21",
+    "axios": "^0.25.0",
+    "firebase": "^9.6.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-uuid": "^1.0.2",
+    "styled-components": "^5.3.3",
     "typescript": "~4.1.5"
   },
   "scripts": {
